@@ -197,7 +197,7 @@ class Roda
         # cached for.  Also sets the Expires header, useful if you have
         # HTTP 1.0 clients (Cache-Control is an HTTP 1.1 header).
         def expires(max_age, opts=OPTS)
-          cache_control(opts.merge(:max_age=>max_age))
+          cache_control(Hash[opts].merge!(:max_age=>max_age))
           self[EXPIRES] = (Time.now + max_age).httpdate
         end
 
