@@ -1,5 +1,7 @@
 = HEAD
 
+* Avoid rehashing hashes at runtime in plugins (jeremyevans)
+
 * Add heartbeat plugin for heartbeat support (jeremyevans)
 
 * Support :serializer option in json plugin (janko-m) (#21)
